# api-client

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX_RULES.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.e2e.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
e2e/: smoke.spec.ts
e2e/fixtures/: mockTauri.ts
goal-1/: input.md  plan.md  tasks.md
goal-15/: input.md  plan.md  tasks.md
goal-2/: input.md  plan.md  tasks.md
goal-3/: input.md  plan.md  tasks.md
goal-4/: input.md  plan.md  tasks.md
goal-5/: input.md  plan.md  tasks.md
goal-6/: input.md  plan.md  tasks.md
goal-7/: input.md  plan.md  tasks.md
goal-8/: input.md  plan.md  tasks.md
goal-9/: input.md  plan.md  tasks.md
scripts/: ensure-dev-ports.mjs
src/: App.body.test.tsx  App.crud.test.tsx  App.empty-state.test.tsx  App.environment-autosave.test.tsx  App.explorer-search.test.tsx  App.history-replay.test.tsx  App.request-editor.test.tsx  App.tsx  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  curl.rs  db.rs  error.rs  file_transfer.rs  http.rs  lib.rs  main.rs  mock_server.rs  models.rs  oauth2.rs  postman.rs  request_error.rs  secrets.rs  sse.rs  storage.rs  transport.rs
src/components/: AuthEditor.tsx  CodeEditor.tsx  CodeEditorImpl.tsx  CodegenModal.tsx  CollectionAuthModal.tsx  CollectionRunnerModal.tsx  CollectionTree.tsx  ConfirmDialog.tsx  CookiesPanel.tsx  EnvironmentPanel.tsx  KeyValueEditor.tsx  MockServerPanel.tsx  PanelCard.tsx  RequestPanel.tsx  ResponseDiffModal.tsx  ResponsePanel.tsx  SaveToCollectionModal.tsx  SaveToVariableModal.tsx  SearchPalette.tsx  SettingsPanel.tsx  Sidebar.tsx  SidebarHistoryTab.tsx  SidebarRecentTab.tsx  Splitter.tsx  SsePanel.tsx  TabBar.tsx  VariablePreview.tsx  VariableScopeModal.tsx  VariablesEditor.tsx  WorkspaceSwitcher.tsx  WsPanel.tsx
src/i18n/: index.ts  locales.test.ts
src/lib/: tauri.ts
src/store/: requestStore.ts  storeHelpers.test.ts  storeHelpers.ts  storeTypes.ts  uiStore.ts  useRequestStore.ts
src/types/: index.ts
src/utils/: auth.ts  codegen.ts  curl.test.ts  curl.ts  diff.ts  digest.test.ts  digest.ts  dynamicVars.test.ts  dynamicVars.ts  e2eMockTauri.ts  envIo.test.ts  envIo.ts  folderTree.test.ts  folderTree.ts  har.test.ts  har.ts  historySnapshot.test.ts  historySnapshot.ts  (+36 more)
(+13 files in other folders)
