[package]
name = "api-client"
version = "0.1.0"
description = "A cross-platform API debugging client built with Tauri 2, React, and TypeScript."
authors = ["Codex"]
edition = "2021"

[lib]
name = "api_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
keyring-core = "1.0.0"
keyring = "4.0.1"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
