[package]
name = "api-client"
version = "0.1.0"
description = "A Postman-like API Client"
authors = ["you"]
edition = "2021"
license = "MIT"

[lib]
name = "api_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "cookies", "socks", "native-tls"] }
cookie = "0.18"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "2"
dirs = "5"
thiserror = "1"
bytes = "1.11.1"
axum = "0.7"
tower = "0.5"
http = "1"
